--- a/app/src/main/resources/velocity/layout.html
+++ b/app/src/main/resources/velocity/layout.html
@@ -40,7 +40,7 @@
 							<span>Session</span>
 						</a>
 					</li>
-					<li class="nav-link nav-series" id="">
+					<li class="nav-link nav-series" id="nav-series">
 						<a href="#">
 							<i class="bi bi-calendar-range-fill"></i> 
 							<span>Series</span>
