Nav component logic started

--- a/app/bin/main/velocity/Logged_in_Live_Session_page.html
+++ b/app/bin/main/velocity/Logged_in_Live_Session_page.html
@@ -186,7 +186,7 @@
 		fill: rgba(65,225,71,1);
 	}
 	.Path_22 {
-		filter: drop-shadow(0px 0px 30px rgba(65, 225, 71, 1));
+		filter: drop-shadow(0px 0px 30px #41e147);
 		overflow: visible;
 		position: absolute;
 		width: 272.226px;
@@ -227,7 +227,7 @@
 		overflow: visible;
 	}
 	#Rectangle_26 {
-		fill: rgba(224,224,65,1);
+		fill: #e0e041;
 	}
 	.Rectangle_26 {
 		position: absolute;
@@ -238,7 +238,7 @@
 		top: 96px;
 	}
 	#Rectangle_27 {
-		fill: rgba(224,88,65,1);
+		fill: #e05841;
 	}
 	.Rectangle_27 {
 		position: absolute;
