--- a/app/src/main/resources/velocity/index.html
+++ b/app/src/main/resources/velocity/index.html
@@ -19,7 +19,7 @@
   <script src="../static/modules/react-dom.production.min.js"></script>
   <!-- Babel for compiling text/babel, JSX files -->
   <!-- TODO remove before production -->
-  <script src="../satic/modules/babel.min.js"></script>
+  <script src="../static/modules/babel.min.js"></script>
   <!-- Bootstrap js -->
   <script src="../static/modules/bootstrap-5.0.0-beta2/dist/js/bootstrap.min.js"></script>
   <!-- App -->
